--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Valery Buko",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "next": "^9.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
