--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "next": "^9.3.5",
+    "next-redux-wrapper": "^6.0.0-rc.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
