--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "ssr",
   "version": "1.0.0",
-  "description": "Server Side Rendering",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "start": "next start",
-    "build": "next build"
+    "build": "next build",
+    "start": "next start"
   },
-  "author": "Valery Buko",
+  "author": "Emmanuel Henri",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-css": "^1.0.1",
-    "next": "^9.3.5",
-    "next-redux-wrapper": "^6.0.0-rc.7",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "@zeit/next-css": "0.0.7",
+    "next": "^5.0.0",
+    "next-redux-wrapper": "^1.3.5",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
   }
 }
